# elficon

./: COPYING  COPYING.debian  ChangeLog  ChangeLog.debian  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.status  configure  configure.ac  languagetest.sh  pathicons.sh
debian/: README.Debian  autoreconf.after  autoreconf.before  changelog  control  copyright  debhelper-build-stamp  elfres.default.ex  elfres.dirs  elfres.doc-base.EX  elfres.install  elfres.postinst  elfres.postrm  elfres.substvars  files  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postrm.ex  preinst.ex  prerm  rules  rules.backup  watch.ex
po/: POTFILES.in  de.po  elfres.pot
specification/: architecture.dia
src/: Makefile  Makefile.am  Makefile.in  elfres-gui.c  elfres.c  elfres.desktop  elfres.h  elfres.ui
